# dawless

./: .gitmodules  4  Cargo.toml  shell.nix
app/: Cargo.toml  dawless-cli.rs  dawless-tui.rs  dawless.rs
crates/brailledump/: Cargo.toml  charset.rs
crates/common/: Cargo.toml  file.rs  lib.rs  lib_tui.rs
crates/common/examples/: layout.rs
crates/common/tui/: empty.rs  file.rs  frame.rs  label.rs  layout.rs  list.rs  mod.rs  scroll.rs  size.rs  space.rs  theme.rs  toggle.rs
crates/common/tui/layout/: layout.rs  mod.rs  point.rs  size.rs  space.rs
crates/common/tui/widgets/: empty.rs  file.rs  frame.rs  label.rs  list.rs  mod.rs  scroll.rs  toggle.rs
crates/dawless/: Cargo.toml  dawless.rs  tui.rs
crates/dawless-akai/: Cargo.toml  README.md  akai.rs  akai_device.rs  akai_devices.rs  akai_disk.rs  akai_disk_blank.rs  akai_disk_files.rs  akai_disk_load.rs  akai_file.rs  akai_multi.rs  akai_program.rs  akai_sample.rs  akai_string.rs  s2kdie.php
crates/dawless-akai/docs/: s2kdie.php
crates/dawless-iconnectivity/: Cargo.toml  iconnectivity.rs
crates/dawless-korg/: Cargo.toml  korg.rs  korg_electribe2.rs  korg_triton.rs
crates/dawless-korg/docs/: sample_format.md  viewtopic.php?t=95368.1
crates/dawless-korg/electribe2/: cli.rs  mod.rs  tui.rs
crates/hfe/: Cargo.toml
crates/laterna/: Cargo.toml  laterna.rs
devices/: README.md
devices/akai/: Cargo.toml  _akai.rs  mpc2k-tui.rs  mpc2k.rs  s3kxl-tui.rs  s3kxl.rs
devices/iconnectivity/: Cargo.toml  iconnectivity.rs
devices/korg/: Cargo.toml  _korg-cli.rs  _korg.rs  electribe2-cli.rs  electribe2-tui-patterns.rs  electribe2-tui-samples.rs  electribe2-tui.rs  electribe2.rs  korg.rs  triton.rs
devices/korg/docs/: viewtopic.php?t=95368
docs/akai/: s2kdie.php
libs/brailledump/: Cargo.toml
libs/laterna/: Cargo.toml  laterna.rs
libs/thatsit/: Cargo.toml  README.md  default.rs  display.rs  focus.rs  handle.rs  layout.rs  macros.rs  mod.rs  ops.rs  render.rs  scroll.rs  thatsit.rs  themes.rs  thunk.rs  units.rs  utils.rs  widget.rs  widgets.rs  
libs/thatsit-focus/: Cargo.toml  focus.rs
libs/thatsit-fs/: Cargo.toml  thatsit-fs.rs
libs/thatsit-proc/: Cargo.toml
libs/thatsit-proc/src/: impls.rs  lib.rs
libs/thatsit-scroll/: thatsit-scroll.rs
libs/thatsit-tabs/: Cargo.toml  tabs.rs
libs/thatsit-widgets/: Cargo.toml  borders.rs  files.rs  mod.rs  scroll.rs  tabs.rs
libs/thatsit/examples/: layout.rs
libs/thatsit/layout/: display.rs  layout.rs  mod.rs  point.rs  size.rs  space.rs
libs/thatsit/themes/: mod.rs
libs/thatsit/widgets/: accordion.rs  blank.rs  button.rs  debug.rs  empty.rs  focus.rs  frame.rs  label.rs  list.rs  mod.rs  scroll.rs  toggle.rs
libs/thatsit2/: Cargo.toml  handle.rs  layout.rs  mod.rs  thatsit2.rs
old/: Cargo.toml  units.rs
src/: README.md  bhex.rs  cli.rs  hfe.rs  main.rs  s2k.rs  tui.rs
src/akai/: cli.rs  mod.rs  scratch.pad
src/akai/mpc2k/: mod.rs  tui.rs
src/akai/s3kxl/: mod.rs  tui.rs
src/iconnectivity/: mod.rs
src/korg/: mod.rs
src/korg/electribe2/: mod.rs  tui.rs
src/korg/triton/: mod.rs
