[workspace]
members = [
  # UI framework
  "libs/thatsit",
  "libs/thatsit-focus",
  "libs/thatsit-fs",
  "libs/thatsit-tabs",

  # Data formats
  "libs/opt-mod",
  "libs/brailledump",
  "libs/hfedisk",
  "libs/laterna",

  # App modules
  "app",
  "devices/akai",
  "devices/iconnectivity",
  "devices/korg",
]
