[package]
name = "dawless"
version = "0.1.0"
edition = "2021"

[dependencies]
opt-mod = { path = "libs/opt-mod" }
brailledump = { path = "libs/brailledump" }
clap = { optional = true, version = "4.0.18", features = ["derive"] }
thatsit = { optional = true, git = "https://github.com/egasimus/thatsit" }
laterna = { optional = true, path = "libs/laterna" }

[features]
default = ["cli", "tui"]
cli = [ "clap", ]
tui = [ "thatsit", "laterna" ]
