[package]
name = "dawless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dawless"
path = "dawless.rs"

[dependencies]
opt-mod = { path = "../libs/opt-mod" }
dawless-akai = { path = "../devices/akai", features = ["cli", "tui"] }
dawless-korg = { path = "../devices/korg", features = ["cli", "tui"] }
dawless-iconnectivity = { path = "../devices/iconnectivity", features = ["tui"] }

clap = { optional = true, version = "4.0.18", features = ["derive"] }

thatsit = { optional = true, path = "../libs/thatsit" }

better-panic = "0.3.0"

[features]
default = ["cli", "tui"]
cli = [ "clap", "dawless-akai/cli", "dawless-korg/cli", "dawless-iconnectivity/cli" ]
tui = [ "thatsit", "dawless-akai/tui", "dawless-korg/tui", "dawless-iconnectivity/tui" ]
