[package]
name = "dawless-iconnectivity"
version = "0.1.0"
edition = "2021"
description = "Support for iConnectivity devices."

[lib]
path = "iconnectivity.rs"

[dependencies]
dawless-common = { path = "../common" }
crossterm      = { optional = true, version = "0.25" }

[features]
tui = [ "crossterm" ]
