[package]
name = "dawless-korg"
version = "1.0.0"
edition = "2021"
description = "Support for Korg Electribe and Korg Triton Rack data."

[lib]
path = "korg.rs"

[dependencies]
dawless-common = { path = "../common" }
crossterm      = { optional = true, version = "0.25" }
brailledump    = { optional = true, path = "../brailledump" }
clap           = { optional = true, version = "4.0.18", features = ["derive"] }
tabwriter      = { optional = true, version = "1.2.1" }
lazy_static    = { optional = true, version = "1.4" }
laterna        = { optional = true, path = "../laterna" }

[features]
cli = [ "brailledump", "clap", "tabwriter" ]
tui = [ "lazy_static", "crossterm", "laterna" ]
