[package]
name = "dawless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dawless"
path = "dawless.rs"

[dependencies]
clap         = { version = "4.0.18", features = ["derive"] }
tui          = { version = "0.19" }
crossterm    = { version = "0.25" }
lazy_static  = { version = "1.4" }
dawless-akai = { path = "../dawless-akai", features = ["cli"] }
dawless-korg = { path = "../dawless-korg", features = ["cli"] }
