[package]
name = "dawless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dawless"
path = "dawless.rs"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
lazy_static = { version = "1.4" }
dawless-akai = { path = "../dawless-akai", features = ["cli", "tui"] }
dawless-korg = { path = "../dawless-korg", features = ["cli", "tui"] }
dawless-iconnectivity = { path = "../dawless-iconnectivity", features = ["tui"] }
dawless-common = { path = "../common" }
