[package]
name = "dawless-akai"
version = "0.1.0"
edition = "2021"
description = "Support for AKAI sampler floppy disk images."

[lib]
path = "_akai.rs"

[dependencies]
opt-mod = { path = "../../libs/opt-mod" }
brailledump = { optional = true, path = "../../libs/brailledump" }
clap = { optional = true, version = "4.0.18", features = ["derive"] }
tabwriter = { optional = true, version = "1.2.1" }
lazy_static = { optional = true, version = "1.4" }

thatsit = { optional = true, git = "https://github.com/egasimus/thatsit" }

[features]
default = [ "cli", "tui" ]
cli = [ "brailledump", "clap", "tabwriter" ]
tui = [ "lazy_static", "thatsit" ]
