[package]
name = "dawless-iconnectivity"
version = "0.1.0"
edition = "2021"
description = "Support for iConnectivity devices."

[lib]
path = "iconnectivity.rs"

[dependencies]
thatsit = { optional = true, git = "https://github.com/egasimus/thatsit" }
thatsit-widgets = { optional = true, path = "../../libs/thatsit-widgets" }

[features]
tui = [ "thatsit", "thatsit-widgets" ]
cli = []
