[package]
name = "dawless-korg"
version = "0.1.0"
edition = "2021"
description = "Support for Korg Electribe and Korg Triton Rack data."

[lib]
path = "_korg.rs"

[dependencies]
opt-mod = { path = "../../libs/opt-mod" }
brailledump = { optional = true, path = "../../libs/brailledump" }
clap = { optional = true, version = "4.0.18", features = ["derive"] }
tabwriter = { optional = true, version = "1.2.1" }
lazy_static = { optional = true, version = "1.4" }

laterna = { optional = true, path = "../../libs/laterna" }
thatsit = { optional = true, path = "../../libs/thatsit" }
thatsit-widgets = { optional = true, path = "../../libs/thatsit-widgets" }

[features]
default = [ "cli", "tui" ]
cli = [ "brailledump", "clap", "tabwriter" ]
tui = [ "lazy_static", "laterna", "thatsit", "thatsit-widgets" ]
